@@ -1,5 +1,5 @@
-# relocatable.m4 serial 2 (gettext-0.13)
-dnl Copyright (C) 2003 Free Software Foundation, Inc.
+# relocatable.m4 serial 3 (gettext-0.15)
+dnl Copyright (C) 2003, 2005 Free Software Foundation, Inc.
 dnl This file is free software; the Free Software Foundation
 dnl gives unlimited permission to copy and/or distribute it,
 dnl with or without modifications, as long as this notice is preserved.
@@ -13,6 +13,7 @@ AC_DEFUN([AC_RELOCATABLE],
   AC_BEFORE([AC_PROG_INSTALL],[AC_RELOCATABLE])
   AC_REQUIRE([AC_LIB_LIBPATH])
   AC_REQUIRE([AC_RELOCATABLE_LIBRARY])
+  is_noop=no
   use_elf_origin_trick=no
   if test $RELOCATABLE = yes; then
     # --enable-relocatable implies --disable-rpath
@@ -21,32 +22,37 @@ AC_DEFUN([AC_RELOCATABLE],
     AC_DEFINE([ENABLE_RELOCATABLE], 1,
       [Define to 1 if the package shall run at any location in the filesystem.])
     case "$host_os" in
+      mingw*) is_noop=yes ;;
       linux*) use_elf_origin_trick=yes ;;
     esac
-    if test $use_elf_origin_trick = yes; then
-      dnl Use the dynamic linker's support for relocatable programs.
-      case "$ac_aux_dir" in
-        /*) reloc_ldflags="$ac_aux_dir/reloc-ldflags" ;;
-        *) reloc_ldflags="\$(top_builddir)/$ac_aux_dir/reloc-ldflags" ;;
-      esac
-      SET_RELOCATABLE="RELOCATABLE_LDFLAGS = \"$reloc_ldflags\" \"\$(host)\" \"\$(RELOCATABLE_LIBRARY_PATH)\""
+    if test $is_noop = yes; then
+      SET_RELOCATABLE="RELOCATABLE_LDFLAGS = :"
     else
-      dnl Unfortunately we cannot define INSTALL_PROGRAM to a command
-      dnl consisting of more than one word - libtool doesn't support this.
-      dnl So we abuse the INSTALL_PROGRAM_ENV hook, originally meant for the
-      dnl 'install-strip' target.
-      SET_RELOCATABLE="INSTALL_PROGRAM_ENV = RELOC_LIBRARY_PATH_VAR=\"$shlibpath_var\" RELOC_LIBRARY_PATH_VALUE=\"\$(RELOCATABLE_LIBRARY_PATH)\" RELOC_PREFIX=\"\$(prefix)\" RELOC_COMPILE_COMMAND=\"\$(CC) \$(CPPFLAGS) \$(CFLAGS) \$(LDFLAGS)\" RELOC_SRCDIR=\"\$(RELOCATABLE_SRC_DIR)\" RELOC_BUILDDIR=\"\$(RELOCATABLE_BUILD_DIR)\" RELOC_CONFIG_H_DIR=\"\$(RELOCATABLE_CONFIG_H_DIR)\" RELOC_INSTALL_PROG=\"$INSTALL_PROGRAM\""
-      case "$ac_aux_dir" in
-        /*) INSTALL_PROGRAM="$ac_aux_dir/install-reloc" ;;
-        *) INSTALL_PROGRAM="\$(top_builddir)/$ac_aux_dir/install-reloc" ;;
-      esac
+      if test $use_elf_origin_trick = yes; then
+        dnl Use the dynamic linker's support for relocatable programs.
+        case "$ac_aux_dir" in
+          /*) reloc_ldflags="$ac_aux_dir/reloc-ldflags" ;;
+          *) reloc_ldflags="\$(top_builddir)/$ac_aux_dir/reloc-ldflags" ;;
+        esac
+        SET_RELOCATABLE="RELOCATABLE_LDFLAGS = \"$reloc_ldflags\" \"\$(host)\" \"\$(RELOCATABLE_LIBRARY_PATH)\""
+      else
+        dnl Unfortunately we cannot define INSTALL_PROGRAM to a command
+        dnl consisting of more than one word - libtool doesn't support this.
+        dnl So we abuse the INSTALL_PROGRAM_ENV hook, originally meant for the
+        dnl 'install-strip' target.
+        SET_RELOCATABLE="INSTALL_PROGRAM_ENV = RELOC_LIBRARY_PATH_VAR=\"$shlibpath_var\" RELOC_LIBRARY_PATH_VALUE=\"\$(RELOCATABLE_LIBRARY_PATH)\" RELOC_PREFIX=\"\$(prefix)\" RELOC_COMPILE_COMMAND=\"\$(CC) \$(CPPFLAGS) \$(CFLAGS) \$(LDFLAGS)\" RELOC_SRCDIR=\"\$(RELOCATABLE_SRC_DIR)\" RELOC_BUILDDIR=\"\$(RELOCATABLE_BUILD_DIR)\" RELOC_CONFIG_H_DIR=\"\$(RELOCATABLE_CONFIG_H_DIR)\" RELOC_INSTALL_PROG=\"$INSTALL_PROGRAM\""
+        case "$ac_aux_dir" in
+          /*) INSTALL_PROGRAM="$ac_aux_dir/install-reloc" ;;
+          *) INSTALL_PROGRAM="\$(top_builddir)/$ac_aux_dir/install-reloc" ;;
+        esac
+      fi
     fi
   else
     SET_RELOCATABLE=
   fi
   AC_SUBST([SET_RELOCATABLE])
   AM_CONDITIONAL([RELOCATABLE_VIA_LD],
-    [test $use_elf_origin_trick = yes])
+    [test $is_noop = yes || test $use_elf_origin_trick = yes])
 ])
 
 dnl Support for relocatable libraries.
